[package]
name = "pacrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
geo = "0.24.1"
geo-types = { version = "0.7.9", features = ["use-rstar_0_10"] }
geojson = "0.24.0"
gpx = "0.8.6"
osm-xml = { git = "https://github.com/phinjensen/osm-xml.git", version = "0.6.2" }
rstar = "0.10.0"
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"
time = "0.3.20"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
